refactor: variáveis de cor e ajustes de botão e layout

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <footer>
-        <p class="copyright">&copy; 2024 Global Partner. All rights reserved.</p>
+        <p class="copyright">&copy;2025 Global Citizen Solutions | All Rights Reserved</p>
       </footer>
     </div>
     <div class="right-column">
